# Pacman

./: CMakeLists.txt  README.md  main.c
images/: mushrooms.avif
src/: game.c  game.h  menu.c  menu.h  records.c  records.h
